--- a/JITADWeb/Site.master
+++ b/JITADWeb/Site.master
@@ -1,4 +1,4 @@
-<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="SiteMaster" %>
 
 <!DOCTYPE html>
 <html>
@@ -11,7 +11,7 @@
     <script src="/Scripts/jquery-2.1.3.min.js"></script>
     <script src="/Scripts/jquery.lazyload.js"></script>
 
-
+    <%@ Import Namespace="Microsoft.AspNet.FriendlyUrls" %>
     <script type="text/javascript" charset="utf-8"> 
         $(document).ready(function () {
             $("img").lazyload({
