--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -11,7 +11,7 @@ body { font-family: 'Lato', sans-serif; font-size: 18px; background: #fff;}
 
 header, article, footer, aside, .frame { width: 100%;}
 
-.menu { position: fixed; top: 0;  background: rgba(0,0,0,.1); height: 80px; font-weight: 400; font-size: 14px; z-index: 99; padding: 0px 20px;}
+.menu { position: absolute; top: 0; background: #fff; height: 80px; font-weight: 400; font-size: 14px; z-index: 99; padding: 0px 20px;}
 
 nav { text-align: center;}
 
@@ -21,7 +21,7 @@ nav { text-align: center;}
      100% {background-color: #d95338;}
 }
 
-header { padding: 260px 0px; -webkit-animation: pulse 10s infinite alternate; background: #65d0ff; text-align: center; color: #fff;}
+header { padding: 150px 0px; -webkit-animation: pulse 10s infinite alternate; background: #65d0ff; text-align: center; color: #fff;}
 header p { opacity: .7; padding-bottom: 45px;}
 
 .container, .content { width: 100%; max-width: 1200px; margin: 0 auto;}
@@ -29,7 +29,7 @@ header p { opacity: .7; padding-bottom: 45px;}
 #introduce { padding: 130px 0px; color: #c3c3c3;}
 .icons-win { position: absolute; left: 50px; top: -150px}
 
-#counter { padding: 120px 0px;  background: #e9e9e9; color: #299dd0; text-align: center;}
+#counter { padding: 120px 0px;  background: #f3f3f3; color: #299dd0; text-align: center;}
 #counter table { margin: 0 auto;}
 #counter table  td { padding: 10px;}
 #counter table  tr:first-of-type { font-size: 70px; font-weight: 300;}
@@ -54,10 +54,12 @@ header p { opacity: .7; padding-bottom: 45px;}
 
 #agenda { text-align: center; padding: 80px 0px; border-top: 1px solid #ccc;}
 
+#login .bit-2 { padding: 30px;}
+
 footer { background: #222;}
 
-h2 { font-size: 16px; font-weight: 300;}
-h3 { font-size: 60px; font-weight: 100; color: #1681b0;}
+h2 { font-size: 16px; font-weight: 700;}
+h3 { font-size: 60px; font-weight: 300; color: #1681b0; padding-bottom: 20px;}
 h4 { font-size: 22px; font-weight: 300; padding: 30px;}
 p {}
 
@@ -76,6 +78,7 @@ a.sign-up:hover { padding: 20px; position: relative; top: 25px; color: #299dd0; 
 
 .bit-40 { position: relative;}
 
+img { width: 100%; height: auto;}
 img.microsoft { width: 400px; height: auto;}
 
 .page-wrap {
@@ -138,6 +141,19 @@ input, textarea { background: rgba(255,255,255,.1); outline: none; border: none;
 input:focus, textarea:focus { background: rgba(255,255,255,.2);}
 
 input { width: 50%;}
+#login input { width: 100%; border: 1px solid #ccc;}
 input[type=submit] { width: 100% !important; margin-top: 10px; background: #000; color: #fff;}
-input[type=submit]:hover { background-color: #222;}
+input[type=submit]:hover { background-color: #111;}
 textarea { width: 100%;}
+
+/* Mobile to Tablet Portrait
+===============================*/
+@media (min-width: 480px) and (max-width: 800px) {
+
+}
+
+/* Landscape Tablet to Desktop
+===============================*/
+@media (min-width: 800px) and (max-width: 1300px) {
+	.container { max-width: 900px;}
+}
