--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -142,6 +142,8 @@ input:focus, textarea:focus { background: rgba(255,255,255,.2);}
 
 input { width: 50%;}
 #login input { width: 100%; border: 1px solid #ccc;}
+#usrData input { width: 100%; border: 1px solid #ccc;}
+#passChg input { width: 100%; border: 1px solid #ccc;}
 input[type=submit] { width: 100% !important; margin-top: 10px; background: #000; color: #fff;}
 input[type=submit]:hover { background-color: #111;}
 textarea { width: 100%;}
