--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -61,6 +61,8 @@ footer { background: #222;}
 h2 { font-size: 16px; font-weight: 700;}
 h3 { font-size: 60px; font-weight: 300; color: #1681b0; padding-bottom: 20px;}
 h4 { font-size: 22px; font-weight: 300; padding: 30px;}
+h2.adminHeader {font-size: 35px; font-weight: 700;}
+h3.adminHeader {font-size: 25px; font-weight: 500;}
 p {}
 
 a { text-decoration: none;}
