--- a/JITADWeb/css/lemonade.css
+++ b/JITADWeb/css/lemonade.css
@@ -93,10 +93,15 @@
   .bit-11 {
     width: 100%; }
   .bit-12 {
-    width: 100%; } }
+    width: 100%; } 
+  .bit-75 {
+      width: 50%; }
+  .bit-25 {
+      width: 50%; }
+}
 
 @media (min-width: 30em) and (max-width: 50em) {
-  .bit-4, .bit-6, .bit-8, .bit-10, .bit-12 {
+  .bit-4, .bit-6, .bit-8, .bit-10, .bit-12, .bit-25, .bit-75 {
     width: 50%; }
   .bit-1, .bit-2, .bit-3, .bit-5, .bit-7, .bit-9, .bit-11 {
     width: 100%; } }
@@ -105,7 +110,10 @@
   .bit-2, .bit-7 {
     width: 100%; }
   .bit-4, .bit-8, .bit-10, .bit-12 {
-    width: 50%; } }
+    width: 50%; } 
+  .bit-75{ width: 60%;}
+  .bit-25{ width: 40%;}
+}
 
 .box {
   background: #FCD920;
