--- a/JITADWeb/Site.master
+++ b/JITADWeb/Site.master
@@ -4,6 +4,13 @@
 <html>
 <head runat="server">
     <meta charset="utf-8" />
+    <meta name="og:type" content="website" />
+    <meta name="og:title" content="JITAD 2015 Warszawa" />
+    <meta name="og:site_name" content="JITAD 2015" />
+    <meta name="og:url" content="jitad2015.waw.pl" />
+    <meta name="og:image" content="jitad2015.waw.pl/Images/logo1.png" />
+    <meta name="og:locale" content="pl_PL" />
+    <meta name="og:description" content="" /> <%-- Description required --%>
     <title>Junior ITAD - <%:Page.Title %></title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/lemonade.css" />
