fixed resizing of contact form textarea (height+ only)

--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -149,7 +149,7 @@ input { width: 50%;}
 #query input { width: 100%; border: 1px solid #ccc; margin-bottom: 3px;}
 input[type=submit] { width: 100% !important; margin-top: 10px; background: #000; color: #fff;}
 input[type=submit]:hover { background-color: #111;}
-textarea { width: 100%;}
+textarea { width: 100%; min-width: 100%; max-width: 50%;}
 
 /* Mobile to Tablet Portrait
 ===============================*/
