--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -29,7 +29,7 @@ header p { opacity: .7; padding-bottom: 45px;}
 #introduce { padding: 130px 0px; color: #c3c3c3;}
 .icons-win { position: absolute; left: 50px; top: -150px}
 
-#counter { padding: 120px 0px;  background: #f3f3f3; color: #299dd0; text-align: center;}
+#counter { padding: 120px 0px;  background: #96c278; color: #ffffff; text-align: center;}
 #counter table { margin: 0 auto;}
 #counter table  td { padding: 10px;}
 #counter table  tr:first-of-type { font-size: 70px; font-weight: 300;}
