--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -73,6 +73,8 @@ a.sign-up-top { padding: 10px; position: relative; top: 25px; color: #fff; backg
 a.sign-up { padding: 20px; position: relative; top: 25px; color: #299dd0; background: #fff; border: 1px solid #fff; transition: all 0.1s ease;}
 a.sign-up:hover { padding: 20px; position: relative; top: 25px; color: #299dd0; border: 4px solid #fff;}
 
+a.menu-text {display: inline; position: relative; top: -25px; left: -5px; color:#a9a9a9; font-size: 1.4em;}
+
 .toggle-menu img { width: 64px; height: 64px; opacity: .2;}
 
 .logo { background: url('../images/logo2.png') no-repeat; width: 500px; height: 223px; margin: 0 auto;}
@@ -154,7 +156,7 @@ textarea { width: 100%; min-width: 100%; max-width: 50%;}
 /* Mobile to Tablet Portrait
 ===============================*/
 @media (min-width: 480px) and (max-width: 800px) {
-
+    a.menu-text {display: none;}
 }
 
 /* Landscape Tablet to Desktop
