--- a/JITADWeb/Site.master
+++ b/JITADWeb/Site.master
@@ -57,17 +57,14 @@
 
     <div class="page-wrap">
         <div class="menu frame">
-            <div class="bit-75">
                 <label for="main-nav-check" class="toggle-menu">
-                    <img src="/Images/menu.svg" alt="menu" />
                     <a class="menu-text">MENU</a>
                 </label>
-            </div>
-            <div class="bit-25">
+            <div class="box-right">
                 <% if (Session["CurrentUser"] == null && !Request.RawUrl.Contains("/Konto/Zaloguj")) Response.Write(
                    "<a href='/Konto/Zaloguj' class='sign-in-top'>ZALOGUJ SIĘ</a><a href='/Konto/Zaloguj' class='sign-up-top'>ZAREJESTRUJ SIĘ</a>");
                 %>
-            </div>
+                </div>
         </div>
 
         <form runat="server">
