--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -11,7 +11,7 @@ body { font-family: 'Lato', sans-serif; font-size: 18px; background: #fff;}
 
 header, article, footer, aside, .frame { width: 100%;}
 
-.menu { position: absolute; top: 0; background: #fff; height: 80px; font-weight: 400; font-size: 14px; z-index: 99; padding: 0px 20px;}
+.menu { position: fixed; top: 0; background: #fff; height: 80px; font-weight: 400; font-size: 14px; z-index: 99; padding: 0px 20px;}
 
 nav { text-align: center;}
 
@@ -85,11 +85,12 @@ a { text-decoration: none;}
 
 a.sign-in-top { padding: 10px; position: relative; top: 25px; color: #ddd;}
 a.sign-up-top { padding: 10px; position: relative; top: 25px; color: #fff; background: #299dd0;}
+.box-right{display:inline-block; float:right;}
 
 a.sign-up { padding: 20px; position: relative; top: 25px; color: #299dd0; animation: pulse-text 10s infinite alternate; -webkit-animation: pulse-text 10s infinite alternate; background: #fff; border: 1px solid #fff; transition: all 0.1s ease;}
 a.sign-up:hover { padding: 20px; position: relative; top: 25px; color: #299dd0; border: 4px solid #fff;}
 
-a.menu-text {display: inline; position: relative; top: -25px; left: -5px; color:#a9a9a9; font-size: 1.4em;}
+a.menu-text {display: inline-block; height:80px; color:black; opacity:.2; font-size: 1.4em; padding: 28px 0 0 75px; background-image:url("/Images/menu.svg"); background-repeat:no-repeat;}
 
 .toggle-menu img { width: 64px; height: 64px; opacity: .2;}
 
@@ -173,7 +174,7 @@ textarea { width: 100%; min-width: 100%; max-width: 50%;}
 /* Mobile to Tablet Portrait
 ===============================*/
 @media (min-width: 480px) and (max-width: 800px) {
-    a.menu-text {display: none;}
+    a.menu-text {color:transparent;}
 }
 
 /* Landscape Tablet to Desktop
