--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -49,7 +49,8 @@ header p { opacity: .7; padding-bottom: 45px;}
 #counter table { margin: 0 auto;}
 #counter table  td { padding: 10px;}
 #counter table  tr:first-of-type { font-size: 70px; font-weight: 300;}
-
+#counter table  tr:nth-child(even) {background: white; color:#96c278;}
+#counter table  td:nth-child(even) {background:#96c278;}
 #stats { padding: 120px 0px; text-align: center;}
 #stats .bit-4 { padding: 100px 0px 100px;}
 #stats .bit-4 p:first-of-type { font-size: 80px; color: #96c278; font-weight: 300;}
