--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -106,7 +106,7 @@ a.menu-text {display: inline-block; height:80px; color:black; opacity:.2; font-s
 
 .toggle-menu img { width: 64px; height: 64px; opacity: .2;}
 
-.logo { background: url('../Images/logo_tlo.svg') no-repeat round; width: 500px; height: 223px; margin: 0 auto;}
+.logo { background: url('../Images/logo_tlo.svg') round; width: 500px; height: 223px; margin: 0 auto;}
 .logo h1 { text-indent: -9999px;}
 
 .bit-40 { position: relative;}
