--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -12,6 +12,7 @@ body { font-family: 'Lato', sans-serif; font-size: 18px; background: #fff;}
 header, article, footer, aside, .frame { width: 100%;}
 
 .menu { position: fixed; top: 0; background: #fff; height: 80px; font-weight: 400; font-size: 14px; z-index: 99; padding: 0px 20px;}
+.menu .bit-50:last-of-type { text-align: right; }
 
 nav { text-align: center;}
 
@@ -100,19 +101,23 @@ a.sign-up:hover { padding: 20px; position: relative; top: 25px; color: #299dd0; 
 
 a.menu-text {display: inline-block; height:80px; color:black; opacity:.2; font-size: 1.4em; padding: 28px 0 0 75px; background-image:url("/Images/menu.svg"); background-repeat:no-repeat;}
 
-#main-nav a {margin:8px auto; width:70%; border-bottom:1px solid black;}
-#main-nav a:hover {width:80%; font-size:20px; transition:all .2s ease;}
+/*#main-nav a {margin:8px auto; width:70%; border-bottom:1px solid black;}
+#main-nav a:hover {width:80%; font-size:20px; transition:all .2s ease;}*/
+#main-nav a { padding: 30px 0px; width: 100%; border-bottom:1px solid #f2f2f2;}
+#main-nav a:hover { background: #f9f9f9; padding-left: 8px; transition:all .2s ease;}
+#main-nav a, #main-nav a:hover { color: #299dd0; animation: pulse-text 10s infinite alternate; -webkit-animation: pulse-text 10s infinite alternate;}
 
 
 .toggle-menu img { width: 64px; height: 64px; opacity: .2;}
 
-.logo { background: url('../Images/logo_tlo.svg') round; width: 500px; height: 223px; margin: 0 auto;}
+.logo { background: url('../images/logo3.png') no-repeat; width: 500px; height: 223px; margin: 0 auto;}
 .logo h1 { text-indent: -9999px;}
 
 .bit-40 { position: relative;}
 
 img { width: 100%; height: auto;}
-img.microsoft { width: 400px; height: auto;}
+.microsoft { text-align: center;}
+.microsoft img { width: 400px; height: auto;}
 
 .page-wrap {
   float: right;
@@ -132,7 +137,7 @@ img.microsoft { width: 400px; height: auto;}
   background: #fff;
   overflow: hidden;
   transition: width 0.3s ease;
-  border-right: 1px solid #c3c3c3;
+  border-right: 1px solid #f2f2f2;
 }
 
 .content {
@@ -165,6 +170,7 @@ img.microsoft { width: 400px; height: auto;}
 	width: 80%;
 	position: fixed;
 	right: 0px !important;
+	text-align: left;
 }
 #main-nav a {display: block;}
 /* /////////////////////// */
