--- a/JITADWeb/css/lemonade.css
+++ b/JITADWeb/css/lemonade.css
@@ -13,8 +13,11 @@
 
 [class*='bit-'] {
   float: left;
-  padding: 0.3em; }
+  padding: 0em; }
 
+[class*='bit-']:last-of-type {
+  float: right;}
+  
 .bit-1 {
   width: 100%; }
 
