--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -110,7 +110,7 @@ a.menu-text {display: inline-block; height:80px; color:black; opacity:.2; font-s
 
 .toggle-menu img { width: 64px; height: 64px; opacity: .2;}
 
-.logo { background: url('../images/logo3.png') no-repeat; width: 500px; height: 223px; margin: 0 auto;}
+.logo { background: url('../images/logo3.png') no-repeat; background-size:cover; width: 500px; height: 223px; margin: 0 auto;}
 .logo h1 { text-indent: -9999px;}
 
 .bit-40 { position: relative;}
