Logo svg added, fixed color on Kontakt header

--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -82,6 +82,8 @@ header p { opacity: .7; padding-bottom: 45px;}
 
 #login .bit-2 { padding: 30px;}
 
+#contactFrm h2 {color: #ccc;}
+
 footer { background: #222;}
 
 h2 { font-size: 26px; font-weight: 500;}
