--- a/JITADWeb/Site.master
+++ b/JITADWeb/Site.master
@@ -14,7 +14,7 @@
     <title>Junior ITAD - <%:Page.Title %></title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/lemonade.css" />
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>-->
     <script src="/Scripts/jquery-2.1.3.min.js"></script>
     <script src="/Scripts/jquery.lazyload.js"></script>
 
