--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -67,6 +67,7 @@ header p { opacity: .7; padding-bottom: 45px;}
 #profiles h2 { opacity: .5; padding: 0px 0px 20px;}
 #profiles h3 { padding: 0px 0px 100px;}
 #profiles img { width: 100%; height: auto;}
+#profiles p {padding: 20px;}
 
 #topics { text-align: center; padding: 80px 0px;}
 #topics h2 { opacity: .5; padding: 0px 0px 20px;}
@@ -89,9 +90,11 @@ footer { background: #222;}
 h2 { font-size: 26px; font-weight: 500;}
 h3 { font-size: 60px; font-weight: 300; color: #1681b0; padding-bottom: 20px;}
 h4 { font-size: 22px; font-weight: 300; padding: 30px;}
+h5 { font-size: 20px; font-weight: 300; padding: 20px;}
 h2.adminHeader {font-size: 35px; font-weight: 700;}
 h3.adminHeader {font-size: 25px; font-weight: 500;}
 p {}
+
 
 a { text-decoration: none;}
 
