CSS: Speakers fixes

--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -67,7 +67,10 @@ header p { opacity: .7; padding-bottom: 45px;}
 #profiles h2 { opacity: .5; padding: 0px 0px 20px;}
 #profiles h3 { padding: 0px 0px 100px;}
 #profiles img { width: 100%; height: auto;}
-#profiles p {padding: 20px;}
+#profiles h4 { padding-bottom: 0; }
+#profiles h5 { font-size: 80%; padding: 5px 30px; }
+#profiles .bit-3 h4:last-child, #profiles .bit-3 h4:last-child { padding-bottom: 30px; } /* In case there's no desc */
+#profiles p { font-size: 75%; padding: 10px 30px 30px; }
 
 #topics { text-align: center; padding: 80px 0px;}
 #topics h2 { opacity: .5; padding: 0px 0px 20px;}
