--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -105,6 +105,7 @@ a { text-decoration: none;}
 a.sign-in-top { padding: 10px; position: relative; top: 25px; color: #ddd;}
 a.sign-up-top { padding: 10px; position: relative; top: 25px; color: #fff; background: #299dd0;}
 .box-right{display:inline-block; float:right;}
+.box-left{display:inline-block; float:left;}
 
 a.sign-up { padding: 20px; position: relative; top: 25px; color: #299dd0; animation: pulse-text 10s infinite alternate; -webkit-animation: pulse-text 10s infinite alternate; background: #fff; border: 1px solid #fff; transition: all 0.1s ease;}
 a.sign-up:hover { padding: 20px; position: relative; top: 25px; color: #299dd0; border: 4px solid #fff;}
