--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -111,6 +111,7 @@ a.sign-up { padding: 20px; position: relative; top: 25px; color: #299dd0; animat
 a.sign-up:hover { padding: 20px; position: relative; top: 25px; color: #299dd0; border: 4px solid #fff;}
 
 a.menu-title {font-size: 60px; font-weight: 300; color: #1681b0;}
+a.menu-link {font-size: 25px; color: #ddd; position: relative; top: -15px;}
 
 a.menu-text { display: inline-block; height:80px; color:black; opacity:.2; font-size: 1.4em; padding: 28px 0 0 85px; background-image:url("/Images/menu.svg"); background-repeat:no-repeat; cursor: pointer; }
 
