--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -89,6 +89,9 @@ header p { opacity: .7; padding-bottom: 45px;}
 
 #contactFrm h2 {color: #ccc;}
 
+#partners {text-align: center; padding: 80px 0;}
+
+
 footer { background: #222;}
 
 h2 { font-size: 26px; font-weight: 500;}
