--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -131,7 +131,7 @@ a.menu-text { display: inline-block; height:80px; color:black; opacity:.2; font-
 .toggle-menu img { width: 64px; height: 64px; opacity: .2;}
 
 header .container { padding-top: 30px; }
-.logo { background: url('../images/logo2.png') no-repeat; background-image: url('../images/logo_przezroczyste_svg.svg'), none; background-size: contain; background-position: center; width: 500px; height: 223px; margin: 0 auto;}
+.logo { background: url('../images/logo.png') no-repeat; background-image: url('../images/logo.svg'), none; background-size: contain; background-position: center; width: 500px; height: 223px; margin: 0 auto;}
 
 .logo h1 { text-indent: -9999px;}
 
