--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -151,6 +151,8 @@ img { width: 100%; height: auto;}
 .infobox-info {text-align:left;}
 .infobox-close {font-family:Consolas; font-weight:bold;}
 
+.footer-color {color: #222;}
+
 .page-wrap {
   float: right;
   width: 100%;
