--- a/JITADWeb/css/style.css
+++ b/JITADWeb/css/style.css
@@ -122,8 +122,8 @@ a.sign-up-top { padding: 10px; position: relative; top: 25px; color: #fff; backg
 a.sign-up { padding: 20px; position: relative; top: 25px; color: #299dd0; animation: pulse-text 10s infinite alternate; -webkit-animation: pulse-text 10s infinite alternate; background: #fff; border: 1px solid #fff; transition: all 0.1s ease;}
 a.sign-up:hover { padding: 20px; position: relative; top: 25px; color: #299dd0; border: 4px solid #fff;}
 
-a.menu-title {font-size: 60px; font-weight: 300; color: #1681b0;}
-a.menu-link {font-size: 25px; color: #ddd; position: relative; top: -15px;}
+a.menu-title { display: block; line-height: 80px; width: 120px; font-size: 20px; font-weight: 300; color: #1681b0; text-indent: -9999px; background: url(../images/logo_inverted.png) no-repeat; background: url(../images/logo_inverted.svg) no-repeat; background-size: cover; }
+a.menu-link { font-size: 25px; color: #ddd; position: relative; top: -15px;}
 
 a.menu-text { display: inline-block; height:80px; color:black; opacity:.2; font-size: 1.4em; padding: 28px 0 0 85px; background-image:url("/Images/menu.svg"); background-repeat:no-repeat; cursor: pointer; }
 
